--- a/package.json
+++ b/package.json
@@ -28,16 +28,20 @@
   },
   "homepage": "https://github.com/gorangajic/react-icons#readme",
   "devDependencies": {
+    "babel": "^5.8.23",
+    "babel-eslint": "^4.1.3",
     "camelcase": "^1.2.1",
     "capitalize": "^1.0.0",
     "cheerio": "^0.19.0",
-    "glob": "^5.0.15",
-    "underscore": "^1.8.3",
-    "babel": "^5.8.23",
     "classnames": "^2.2.0",
+    "eslint": "^1.7.3",
+    "eslint-config-airbnb": "^0.1.0",
+    "eslint-plugin-react": "^3.6.3",
+    "glob": "^5.0.15",
     "marky-markdown": "https://github.com/npm/marky-markdown",
     "material-design-lite": "^1.0.5",
     "react": "^0.14.0",
-    "react-dom": "^0.14.0"
+    "react-dom": "^0.14.0",
+    "underscore": "^1.8.3"
   }
 }
