--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "docs": "babel-node --stage 0 ./bin/generate-docs",
     "build": "node ./bin/create | xargs babel --out-dir lib",
+    "prepublish": "npm run build",
     "eslint": "eslint ."
   },
   "repository": {
