--- a/package.json
+++ b/package.json
@@ -31,20 +31,24 @@
   },
   "homepage": "https://github.com/gorangajic/react-icons#readme",
   "devDependencies": {
-    "babel": "^5.8.23",
-    "babel-eslint": "^4.1.3",
-    "camelcase": "^1.2.1",
+    "babel": "^6.3.26",
+    "babel-cli": "^6.4.5",
+    "babel-eslint": "^5.0.0-beta6",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "camelcase": "^2.0.1",
     "capitalize": "^1.0.0",
     "cheerio": "^0.19.0",
-    "classnames": "^2.2.0",
-    "decamelize": "1.1.1",
-    "eslint": "^1.7.3",
-    "eslint-config-airbnb": "^0.1.0",
-    "eslint-plugin-react": "^3.6.3",
-    "glob": "^5.0.15",
+    "classnames": "^2.2.3",
+    "decamelize": "1.1.2",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^3.1.0",
+    "eslint-plugin-react": "^3.15.0",
+    "glob": "^6.0.4",
     "gulp": "^3.9.0",
     "marky-markdown": "https://github.com/npm/marky-markdown",
-    "material-design-lite": "^1.0.5",
+    "material-design-lite": "^1.0.6",
     "svg-scaler": "gorangajic/svg-scaler#take-size-viewbox",
     "underscore": "^1.8.3"
   },
