updated peer dependencies

--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "underscore": "^1.8.3"
   },
   "peerDependencies": {
-    "react": ">=0.14.0 <0.15.0",
-    "react-dom": ">=0.14.0 <0.15.0"
+    "react": "^0.14.0 || ^15.0.0",
+    "react-dom": "^0.14.0 || ^15.0.0"
   },
   "dependencies": {
     "react-icon-base": "1.0.0"
