--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
   },
   "homepage": "https://github.com/gorangajic/react-icons#readme",
   "devDependencies": {
-    "babel": "^6.3.26",
-    "babel-cli": "^6.4.5",
+    "babel": "6.5.2",
+    "babel-cli": "6.7.5",
     "babel-eslint": "^5.0.0-beta6",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
+    "babel-preset-es2015": "6.6.0",
+    "babel-preset-react": "6.5.0",
+    "babel-preset-stage-0": "6.5.0",
     "camelcase": "^2.0.1",
     "capitalize": "^1.0.0",
     "cheerio": "^0.19.0",
