--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,6 @@
 {
- "presets": ["react", "es2015", "stage-0"]
+ "presets": ["react", "es2015", "stage-0"],
+ "plugins": [
+    "add-module-exports"
+  ]
 }
