--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-icons",
-  "version": "2.2.3",
+  "version": "3.0.0",
   "description": "svg react icons of popular icon packs using ES6 imports",
   "scripts": {
     "docs": "babel-node ./bin/generate-docs",
@@ -57,9 +57,9 @@
     "validate-commit-msg": "^2.6.1"
   },
   "dependencies": {
-    "react-icon-base": "2.0.4",
     "react": "^15.0.0",
-    "react-dom": "^15.0.0"
+    "react-dom": "^15.0.0",
+    "react-icon-base": "2.0.4"
   },
   "config": {
     "commitizen": {
