--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,12 @@
 {
- "presets": ["react", "es2015", "stage-0"],
- "plugins": [
-    "add-module-exports"
+ "presets": [
+   "react",
+   [
+     "es2015",
+     {
+       "modules": false
+     }
+   ],
+   "stage-0"
   ]
 }
