--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "babel-cli": "6.7.5",
     "babel-eslint": "^5.0.0-beta6",
     "babel-plugin-add-module-exports": "0.1.2",
-    "babel-preset-es2015": "6.6.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "6.5.0",
     "babel-preset-stage-0": "6.5.0",
     "camelcase": "^2.0.1",
