--- a/package.json
+++ b/package.json
@@ -5,6 +5,25 @@
   "author": "kamijin_fanta <kamijin@live.jp>",
   "license": "MIT",
   "devDependencies": {
-    "octicons": "^7.3.0"
+    "babel-eslint": "^8.2.3",
+    "camelcase": "^5.0.0",
+    "cheerio": "^1.0.0-rc.2",
+    "eslint": "^4.19.1",
+    "eslint-config-google": "^0.9.1",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "glob-promise": "^3.4.0",
+    "ionicons": "^4.0.0",
+    "octicons": "^7.3.0",
+    "prettier": "^1.12.1"
+  },
+  "scripts": {
+    "submodule": "git submodule init && git submodule update",
+    "build": "node scripts/build.js"
   }
 }
