--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "react-icons-set",
-  "version": "1.0.0",
-  "main": "dist/index",
+  "name": "react-icons-set-root",
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "author": "kamijin_fanta <kamijin@live.jp>",
   "license": "MIT",
   "devDependencies": {
     "babel-eslint": "^8.2.3",
-    "camelcase": "^5.0.0",
-    "cheerio": "^1.0.0-rc.2",
     "eslint": "^4.19.1",
     "eslint-config-google": "^0.9.1",
     "eslint-config-prettier": "^2.9.0",
@@ -17,13 +17,9 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.1.0",
-    "glob-promise": "^3.4.0",
-    "ionicons": "^4.0.0",
-    "octicons": "^7.3.0",
     "prettier": "^1.12.1"
   },
   "scripts": {
-    "submodule": "git submodule init && git submodule update",
-    "build": "node scripts/build.js"
+    "submodule": "git submodule init && git submodule update"
   }
 }
