--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-icons-set": "*"
   },
   "scripts": {
     "start": "react-scripts start",
