--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prettier": "^1.12.1"
   },
   "scripts": {
-    "submodule": "git submodule init && git submodule update"
+    "submodule": "git submodule init && git submodule update",
+    "submodule-deinit": "git submodule deinit"
   }
 }
