--- a/packages/react-icons-set/package.json
+++ b/packages/react-icons-set/package.json
@@ -9,6 +9,7 @@
     "@types/react": "^16.3.14",
     "camelcase": "^5.0.0",
     "cheerio": "^1.0.0-rc.2",
+    "feather-icons": "^4.7.3",
     "glob-promise": "^3.4.0",
     "ionicons": "^4.0.0",
     "octicons": "^7.3.0",
