--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,11 @@ git:
   submodules: false
 cache:
   yarn: true
-  directories:
-    - .git/modules
 
 install:
-  - yarn
+  - git submodule init
   - yarn submodule
+  - yarn
 jobs:
   include:
     - stage: build packages
