--- a/packages/react-icons/package.json
+++ b/packages/react-icons/package.json
@@ -25,10 +25,12 @@
     "glob-promise": "^3.4.0",
     "ionicons": "^4.0.0",
     "octicons": "^7.3.0",
+    "renamer": "^1.0.0",
+    "rimraf": "^2.6.2",
     "typescript": "^2.8.3"
   },
   "scripts": {
-    "build": "node scripts/build.js && node ../../node_modules/typescript/bin/tsc"
+    "build": "rimraf ./lib && node ../../node_modules/typescript/bin/tsc && renamer --find js --replace mjs ./lib/* && node ../../node_modules/typescript/bin/tsc -p ./tsconfig.commonjs.json && node scripts/build.js"
   },
   "dependencies": {}
 }
