--- a/packages/preview/package.json
+++ b/packages/preview/package.json
@@ -6,7 +6,7 @@
     "history": "^4.7.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-icons": "3.0.0-beta.1",
+    "react-icons": "3.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
