add tests in ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ jobs:
       script:
         - (cd packages/react-icons/ && yarn build)
         - (cd packages/preview/ && yarn build)
+        - (cd packages/demo/ && yarn test && yarn build)
         - |
           if [ -n "$NETLIFY_ACCESS_TOKEN" ]; then
             yarn netlify deploy --draft --access-token $NETLIFY_ACCESS_TOKEN;
