--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -20,6 +20,14 @@
     "enzyme-to-json": "^3.3.4"
   },
   "jest": {
-    "snapshotSerializers": ["enzyme-to-json/serializer"]
-  }
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
