--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ jobs:
         - (cd packages/demo/ && yarn test && yarn build)
         - |
           if [ -n "$NETLIFY_ACCESS_TOKEN" ]; then
-            NETLIFY_AUTH_TOKEN=$NETLIFY_ACCESS_TOKEN yarn netlify deploy;
+            NETLIFY_AUTH_TOKEN=$NETLIFY_ACCESS_TOKEN yarn netlify deploy --dir ./packages/preview/build --message "$TRAVIS_BRANCH $TRAVIS_COMMIT_MESSAGE";
           fi
 deploy:
   provider: releases
