--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "typicons"]
 	path = packages/react-icons/src/icons/typicons
 	url = https://github.com/stephenhutchings/typicons.font.git
+[submodule "game-icons-inverted"]
+	path = packages/react-icons/src/icons/game-icons-inverted
+	url = https://github.com/delacannon/game-icons-inverted.git
