--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "game-icons-inverted"]
 	path = packages/react-icons/src/icons/game-icons-inverted
 	url = https://github.com/delacannon/game-icons-inverted.git
+[submodule "weather-icons"]
+	path = packages/react-icons/src/icons/weather-icons
+	url = https://github.com/erikflowers/weather-icons.git
