--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "weather-icons"]
 	path = packages/react-icons/src/icons/weather-icons
 	url = https://github.com/erikflowers/weather-icons.git
+[submodule "devicons"]
+	path = packages/react-icons/src/icons/devicons
+	url = https://github.com/vorillaz/devicons.git
