--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ jobs:
         - (cd packages/react-icons/ && yarn build && npm pack)
         - (cd packages/preview/ && yarn build)
         - (cd packages/demo/ && yarn test && yarn build)
+        - (cd packages/webpack4-test/ && yarn test)
         - |
           if [ -n "$NETLIFY_ACCESS_TOKEN" ]; then
             NETLIFY_AUTH_TOKEN=$NETLIFY_ACCESS_TOKEN yarn netlify deploy --dir ./packages/preview/build --message "$TRAVIS_BRANCH $TRAVIS_COMMIT_MESSAGE";
