--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "lerna": "^3.13.1",
     "netlify-cli": "^2.0.0",
     "prettier": "^1.14.3"
   },
