--- a/lerna.json
+++ b/lerna.json
@@ -2,5 +2,10 @@
   "packages": [
     "packages/*"
   ],
-  "version": "3.6.0-beta1"
+  "version": "3.6.0-beta1",
+  "command": {
+    "version": {
+      "push": true
+    }
+  }
 }
