--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
   "packages": [
     "packages/*"
   ],
-  "version": "3.6.0-beta2",
+  "version": "3.6.0",
   "command": {
     "version": {
       "push": true
