--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "submodule": "git submodule update --init --recursive",
     "submodule-deinit": "git submodule deinit --all",
     "netlify": "netlify",
-    "lint": "node ./node_modules/eslint/bin/eslint.js ."
+    "lint": "node ./node_modules/eslint/bin/eslint.js .",
+    "version-up": "lerna version"
   },
   "dependencies": {
     "camelcase": "^5.0.0"
