fix ts support / add test for ts project

--- a/packages/react-icons/package.json
+++ b/packages/react-icons/package.json
@@ -8,6 +8,7 @@
   ],
   "license": "MIT",
   "main": "lib",
+  "types": "./lib/esm/index.d.ts",
   "sideEffects": false,
   "repository": {
     "type": "git",
