--- a/packages/preview/package.json
+++ b/packages/preview/package.json
@@ -3,13 +3,20 @@
   "version": "3.6.1",
   "private": true,
   "dependencies": {
-    "history": "^4.7.2",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-icons": "^3.6.1",
-    "react-router": "^5.0.0",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1"
+    "@loadable/component": "^5.10.3",
+    "history": "^4.10.1",
+    "node-sass": "^4.12.0",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-icons": "^3.7.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "tiny-skeleton-loader-react": "^1.1.0",
+    "unstated-next": "^1.1.0"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   },
   "scripts": {
     "start": "react-scripts start",
