--- a/.gitmodules
+++ b/.gitmodules
@@ -16,6 +16,6 @@
 [submodule "devicons"]
 	path = packages/react-icons/src/icons/devicons
 	url = https://github.com/vorillaz/devicons.git
-[submodule "packages/react-icons/src/icons/ant-design-icons"]
+[submodule "ant-design-icons"]
 	path = packages/react-icons/src/icons/ant-design-icons
 	url = https://github.com/ant-design/ant-design-icons.git
