--- a/packages/preview/package.json
+++ b/packages/preview/package.json
@@ -1,27 +1,36 @@
 {
   "name": "preview",
   "version": "3.6.1",
-  "private": true,
+  "description": "",
+  "scripts": {
+    "start": "next",
+    "build": "next build && next export",
+    "serve": "next start"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "babel-plugin-codegen": "^3.0.0",
-    "history": "^4.10.1",
-    "node-sass": "^4.12.0",
+    "@loadable/component": "^5.10.3",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
+    "basscss": "^8.1.0",
+    "cogo-toast": "^4.1.1",
+    "copy-to-clipboard": "^3.2.0",
+    "next": "^9.1.3-canary.1",
+    "next-pwa": "^1.1.1",
+    "node-sass": "^4.13.0",
+    "prism-react-renderer": "^1.0.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-icons": "^3.7.0",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-icons": "^3.8.0",
     "tiny-skeleton-loader-react": "^1.1.0"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "@types/node": "^12.12.5",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.3",
+    "typescript": "^3.7.0-beta"
   },
   "browserslist": [
     ">0.2%",
