Add support for stroke-based icons
- Add support for SVGs with: inline styles, internal CSS, stroke presentation attributes, and <text>
- Add Predix Design System icons
- Change the build process to copy the artifacts into the preview for easy verification
- Disable linting of generated code (it takes hours to lint it, and it's of little value)
- Add react plugin for eslint, so the demo code can be linted properly as JSX
- Fix few of the remaining linting errors
- Document how to add icons in README.md

--- a/.eslintignore
+++ b/.eslintignore
@@ -5,3 +5,7 @@
 packages/react-icons/lib/*
 packages/react-icons/src/icons/*
 !packages/react-icons/src/icons/index.js
+
+# Ignore generated files
+packages/react-icons/??
+packages/react-icons/*.js
