--- a/packages/react-icons/package.json
+++ b/packages/react-icons/package.json
@@ -56,6 +56,7 @@
     "build-cjs": "tsc -p ./tsconfig.commonjs.json"
   },
   "dependencies": {
-    "camelcase": "^5.0.0"
+    "camelcase": "^5.0.0",
+    "ncp": "^2.0.0"
   }
 }
