--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "RemixIcon"]
 	path = packages/react-icons/src/icons/RemixIcon
 	url = https://github.com/Remix-Design/RemixIcon.git
+[submodule "px-icon-set"]
+	path = packages/react-icons/src/icons/px-icon-set
+	url = https://github.com/tromgy/px-icon-set.git
