--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-standard": "^4.0.0",
     "lerna": "^3.20.2",
     "netlify-cli": "^2.30.0",
