--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "RemixIcon"]
 	path = packages/react-icons/src/icons/RemixIcon
 	url = https://github.com/Remix-Design/RemixIcon.git
+[submodule "packages/react-icons/src/icons/grommet-icons"]
+	path = packages/react-icons/src/icons/grommet-icons
+	url = https://github.com/grommet/grommet-icons.git
