add simple icons

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "flat-color-icons"]
 	path = packages/react-icons/src/icons/flat-color-icons
 	url = https://github.com/icons8/flat-color-icons.git
+[submodule "simple-icons"]
+	path = packages/react-icons/src/icons/simple-icons
+	url = https://github.com/simple-icons/simple-icons
