--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "flat-color-icons"]
 	path = packages/react-icons/src/icons/flat-color-icons
 	url = https://github.com/icons8/flat-color-icons.git
+[submodule "packages/react-icons/src/icons/heroicons"]
+	path = packages/react-icons/src/icons/heroicons
+	url = https://github.com/refactoringui/heroicons
