--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "vscode-icons"]
 	path = packages/react-icons/src/icons/vscode-icons
 	url = https://github.com/microsoft/vscode-codicons.git
+[submodule "packages/react-icons/src/icons/fluent-system-icons"]
+	path = packages/react-icons/src/icons/fluent-system-icons
+	url = https://github.com/microsoft/fluentui-system-icons.git
