--- a/packages/react-icons/tsconfig.json
+++ b/packages/react-icons/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "./lib/esm",
+    "outDir": "../_react-icons_all/lib/esm",
     "module": "es2015",
     "target": "es5",
     "lib": [
