--- a/.eslintignore
+++ b/.eslintignore
@@ -7,7 +7,8 @@
 **/dist/*
 **/public/*
 packages/react-icons/lib/
-packages/react-icons/src/icons/
+packages/react-icons/build/
+packages/react-icons/src/icons/*
 !packages/react-icons/src/icons/index.js
 packages/_react-icons_all/
 packages/_react-icons_all-files/
