--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -6,7 +6,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-icons": "^3.11.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
