--- a/packages/react-icons/tsconfig.commonjs.json
+++ b/packages/react-icons/tsconfig.commonjs.json
@@ -1,7 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../_react-icons_all/lib/cjs",
+    "outDir": "./build/lib/cjs",
     "module": "commonjs"
   }
 }
