--- a/packages/react-icons/package.json
+++ b/packages/react-icons/package.json
@@ -28,17 +28,14 @@
     "@types/react": "^16.9.19",
     "camelcase": "^5.0.0",
     "cheerio": "^1.0.0-rc.2",
-    "copy": "^0.3.2",
     "feather-icons": "^4.7.3",
     "find-package": "^1.0.0",
+    "glob": "^7.1.6",
     "glob-promise": "^3.4.0",
     "ionicons": "^4.4.4",
     "lerna": "^3.20.2",
-    "netlify-cli": "^2.30.0",
     "octicons": "^8.1.0",
     "prettier": "^1.19.1",
-    "renamer": "^1.0.0",
-    "rimraf": "^2.6.2",
     "typescript": "^3.4.5"
   },
   "scripts": {
