add tests, upload artifacts

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -31,6 +31,9 @@ jobs:
       if: steps.restore-cache.outputs.cache-hit != 'true'
     - name: Build Packages
       run: BASE_PATH=/react-icons ./build-script.sh
+    - uses: actions/upload-artifact@v2
+      with:
+        path: packages/_react-icons_*/*.tgz
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
@@ -40,7 +43,7 @@ jobs:
     - name: Release
       uses: ncipollo/release-action@v1
       with:
-        artifacts: "packages/react-icons/react-icons-*.tgz"
+        artifacts: "packages/_react-icons_*/*.tgz"
         bodyFile: "packages/react-icons/VERSIONS"
         token: ${{ secrets.GITHUB_TOKEN }}
       if: contains(github.ref, 'tags/')
