--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -46,4 +46,5 @@ jobs:
         artifacts: "packages/_react-icons_*/*.tgz"
         bodyFile: "packages/react-icons/VERSIONS"
         token: ${{ secrets.GITHUB_TOKEN }}
+        prerelease: ${{ contains(github.ref, 'snapshot') }}
       if: contains(github.ref, 'tags/')
