--- a/packages/react-icons/package.json
+++ b/packages/react-icons/package.json
@@ -49,6 +49,7 @@
     "prettier": "^1.19.1",
     "renamer": "^1.0.0",
     "rimraf": "^2.6.2",
+    "svgo": "^1.3.2",
     "typescript": "^3.4.5"
   },
   "scripts": {
