--- a/packages/demo-all-files/package.json
+++ b/packages/demo-all-files/package.json
@@ -1,11 +1,11 @@
 {
   "name": "demo-all-files",
-  "version": "4.0.1-snapshot.0",
+  "version": "4.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-icons": "^4.0.1-snapshot.0",
+    "react-icons": "^4.1.0",
     "react-scripts": "^3.4.3"
   },
   "scripts": {
