Add Meteocons library

--- a/.gitmodules
+++ b/.gitmodules
@@ -53,5 +53,5 @@
 	path = packages/react-icons/src/icons/webfont-medical-icons
   url = https://github.com/samcome/webfont-medical-icons.git
 [submodule "meteocons"]
-  path = packages/react-icons/src/icons/meteocons
-  url = https://github.com/basmilius/weather-icons.git
+	path = packages/react-icons/src/icons/meteocons
+	url = https://github.com/basmilius/weather-icons
