--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "vscode-icons"]
 	path = packages/react-icons/src/icons/vscode-icons
 	url = https://github.com/microsoft/vscode-codicons.git
+[submodule "academicons"]
+	path = packages/react-icons/src/icons/academicons
+	url = https://github.com/jpswalsh/academicons
