--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "vscode-icons"]
 	path = packages/react-icons/src/icons/vscode-icons
 	url = https://github.com/microsoft/vscode-codicons.git
+[submodule "packages/react-icons/src/icons/simple-line-icons"]
+	path = packages/react-icons/src/icons/simple-line-icons
+	url = https://github.com/thesabbir/simple-line-icons.git
