--- a/packages/preview/package.json
+++ b/packages/preview/package.json
@@ -22,12 +22,12 @@
     "ignore-loader": "^0.1.2",
     "next": "^9.5.3",
     "next-pwa": "^2.0.2",
-    "node-sass": "^4.14.1",
+    "node-sass": "4.12.0",
     "prism-react-renderer": "^1.0.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-icons": "^4.3.1",
+    "react-icons": "latest",
     "tiny-skeleton-loader-react": "^1.1.0"
   },
   "devDependencies": {
