Upgrade dependencies, consistent prettier/linting
- Upgrade to Yarn 3
- Upgrade dart as node-dart is deprecated
- Upgrade to latest version of next, next-pwa, react, typescript for preview site
- Fix numerous lint and ts warnings/errors.
- Add a more appropriate eslint config for preview package based of next
- Remove unnecessary import of React in preview package
- Remove unused build-state.yml as it's been replaced by install-state

--- a/.eslintignore
+++ b/.eslintignore
@@ -8,6 +8,7 @@
 **/public/*
 packages/react-icons/lib/
 packages/react-icons/build/
+packages/react-icons/scripts/
 packages/react-icons/src/icons/*
 !packages/react-icons/src/icons/index.js
 packages/_react-icons_all/
