--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,10 @@ module
 *.log
 *.tgz
 
-.yarn/cache
-.yarn/install-state.gz
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
