--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.8.1",
+    "@babel/eslint-parser": "^7.19.1",
+    "eslint": "^8.25.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.0",
+    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-standard": "^5.0.0",
     "lerna": "^3.22.1",
-    "prettier": "^2.1.1"
+    "prettier": "^2.7.1"
   },
   "scripts": {
     "submodule": "git submodule update --init",
