--- a/packages/preview/package.json
+++ b/packages/preview/package.json
@@ -12,29 +12,29 @@
   "version": "4.6.0",
   "private": true,
   "dependencies": {
-    "@loadable/component": "^5.10.3",
-    "babel-plugin-codegen": "^3.1.0",
-    "babel-plugin-macros": "^2.8.0",
+    "@loadable/component": "^5.15.2",
+    "babel-plugin-codegen": "^4.1.5",
+    "babel-plugin-macros": "^3.1.0",
     "basscss": "^8.1.0",
     "cogo-toast": "^4.1.1",
     "copy-to-clipboard": "^3.2.0",
-    "css-loader": "3.5.3",
+    "css-loader": "6.7.1",
     "ignore-loader": "^0.1.2",
-    "next": "^9.5.3",
-    "next-pwa": "^2.0.2",
-    "node-sass": "^4.14.1",
+    "next": "^12.3.1",
+    "next-pwa": "^5.6.0",
     "prism-react-renderer": "^1.0.2",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "sass": "^1.55.0",
     "tiny-skeleton-loader-react": "^1.1.0"
   },
   "devDependencies": {
-    "@types/node": "^13.5.2",
-    "@types/react": "^16.9.19",
-    "@types/react-dom": "^16.9.5",
-    "typescript": "^3.7.0-beta"
+    "@types/node": "^18.8.5",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "typescript": "^4.8.4"
   },
   "browserslist": [
     ">0.2%",
